Update min Spring version of 4.0.2.REELASE